--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    <h2>
+      <a href="http://localhost:4000/blogs/displayBlogs">Display Blog</a>
+      <a href="http://localhost:4000/blogs/displaySingleBlog">Display Single Blog</a>
+      <a href="http://localhost:4000/blogs/postBlog">Post Blog</a>
+  </h2>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>Blogs dot ejs</p>
