--- a/views/displayBlogs.ejs
+++ b/views/displayBlogs.ejs
@@ -9,16 +9,21 @@
 
         $("#getBlogs").click(function () {
           $("#blogList").empty();
-          sortOrder = "?sort=" + $("#sorting option:selected").val();
+          sortField = "?sortField=" + $("#sortField option:selected").val();
+          sortOrder = "&sortOrder=" + $("#sortOrder option:selected").val();
           console.log(sortOrder);
           $.get(
-            "http://localhost:4000/blogs/all" + sortOrder,
+            "http://localhost:4000/blogs/all" + sortField + sortOrder,
             function (blogs) {
               blogs.forEach((blog) => {
                 $("#blogList").append("<li>" + blog.title + "</li>");
                 $("#blogList").append("<li>" + blog.author + "</li>");
                 $("#blogList").append("<li>" + blog.text + "</li>");
-                
+                $("#blogList").append("<li>" + blog.category + "</li>");
+                $("#blogList").append("<li>" + blog.createdAt + "</li>");
+                $("#blogList").append("<li>" + blog.lastModified + "</li>");
+                $("#blogList").append("<li>" + blog.id + "</li>");
+
                 // Add a space between each blogpost
                 $("#blogList").append("<p>" + "" + "</p>");
               });
@@ -29,17 +34,34 @@
     </script>
   </head>
   <body>
+    <h2>
+      <a href="http://localhost:4000/blogs/displayBlogs">Display Blog</a>
+      <a href="http://localhost:4000/blogs/displaySingleBlog">Display Single Blog</a>
+      <a href="http://localhost:4000/blogs/postBlog">Post Blog</a>
+  </h2>
     <h1>Display Blogs</h1>
     <button id="getBlogs">Get Blogs</button>
-    <ul id="blogList"></ul>
+
     <label for="sortOption">Sort order:</label>
 
+    <select name="sortField" id="sortField">
+      <option value="id">Blog ID</option>
+      <option value="author">Author</option>
+      <option value="title">Title</option>
+      <option value="category">Category</option>
+      <option value="createdAt">Date Created</option>
+      <option value="lastModified">Date Last Modified</option>
+      <option value=""></option>
+    </select>
+
     <!-- STRETCH GOAL -->
-    <select name="Sort" id="sorting">
+    <select name="sortOrder" id="sortOrder">
       <option value="asc">Ascending</option>
       <option value="desc">Descending</option>
     </select>
     <!-- STRETCH GOAL -->
+
+    <ul id="blogList"></ul>
 
     <!-- SOLUTION 1 -->
     <!-- <a href="http://localhost:4000/blogs/all?sort=asc">Sort blogs in ascending order</a>
