--- a/views/displaySingleBlog.ejs
+++ b/views/displaySingleBlog.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
@@ -24,10 +25,10 @@
         var blogId;
         $("#getSingleBlog").click(function () {
           blogId = $("#blogId").val();
-          // title = $("#title").val();
           $.get(
             "http://localhost:4000/blogs/singleBlog/" + blogId,
             function (blog) {
+              $("#displayBlogId").html(blog.id);
               $("#blogTitle").html(blog.title);
               $("#blogAuthor").html(blog.author);
               $("#blogText").html(blog.text);
@@ -36,11 +37,11 @@
         });
         $("#deleteSingleBlog").click(function () {
           blogId = $("#blogId").val();
-          // title = $("#title").val();
-          console.log("delete blog");
+          console.log("delete blog " + blogId);
           $.delete(
-            "http://localhost:4000/blogs/deleteBlog/" + title + blogId,
+            "http://localhost:4000/blogs/deleteBlog/" + blogId,
             function (data) {
+              $("#displayBlogId").html("");
               $("#blogTitle").html("");
               $("#blogAuthor").html("");
               $("#blogText").html(data);
@@ -53,18 +54,20 @@
   <body>
     <h2>
       <a href="http://localhost:4000/blogs/displayBlogs">Display Blog</a>
-      <a href="http://localhost:4000/blogs/displaySingleBlog">Display Single Blog</a>
+      <a href="http://localhost:4000/blogs/displaySingleBlog"
+        >Display Single Blog</a
+      >
       <a href="http://localhost:4000/blogs/postBlog">Post Blog</a>
-  </h2>
+    </h2>
     <h1>Single Blog</h1>
     <span>
       <label>Blog ID</label>
       <input id="blogId" type="text" />
-      <!-- <input id="title" type="text"> -->
     </span>
     <button id="getSingleBlog">Get Single Blog</button>
     <button id="deleteSingleBlog">Delete Single Blog</button>
     <div>
+      <p id="displayBlogId"></p>
       <p id="blogTitle"></p>
       <p id="blogAuthor"></p>
       <p id="blogText"></p>
